# pinecone-openapi-spec

./: README.md  download_openapi_specs.py  index_openapi.yml  openapi.yml  pyproject.toml  vector_openapi.yml
