[tool.poetry]
name = "pinecone-openapi-spec"
version = "0.1.0"
description = ""
authors = ["Nikhil Shinday <nikhil@buildbetter.app>"]
readme = "README.md"
packages = [{include = "pinecone_openapi_spec"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
